--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
     "eslint": "^8",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "typescript": "^5"
