--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.9.5",
     "@apollo/server": "^4.10.0",
     "@as-integrations/next": "^3.0.0",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "apollo-server-micro": "^3.13.0",
     "axios": "^1.6.7",
     "graphql": "^16.8.1",
